# ant3D

./: .gitignore  AUTHORS.txt  CMakeLists.txt  RUN_TEST.bat  TODO.txt
doc/: REFERENCES.txt
samples/: example_nec2pp.txt  monopole.txt  monopole_orig.txt  test_dipolo_1.txt  test_dipolo_2.txt
src/: CMakeLists.txt  ant_dipole.cpp  ant_dipole.h  antenna.cpp  antenna.h  azimuthalgraph.cpp  azimuthalgraph.h  elevationgraph.cpp  elevationgraph.h  hud.cpp  hud.h  main.cpp  necparser.cpp  necparser.h  scenegeometry.cpp  scenegeometry.h  simulation.cpp  simulation.h  utils.cpp  utils.h
